k8sConfig/es-pod-v2.yml
apiVersion: v1
kind: Pod
metadata:
  name: es
  namespace: search
  labels:
    app: es
spec:
  containers:
  - name: es
    image: elasticsearch:8.0.0
    volumeMounts:
      - name: es-data
        mountPath: /usr/share/elasticsearch/data
    readinessProbe:
      httpGet:
        path: /_cluster/health?local=true
        port: 9200
      initialDelaySeconds: 20
      periodSeconds: 10
    resources:
      requests:
        cpu: 1000m
        memory: 4Gi
      limits:
        cpu: 2000m
        memory: 4Gi    
  volumes:
    - name: es-data
      persistentVolumeClaim:
        claimName: es-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: es
  namespace: search
spec:
  type: NodePort
  ports:
  - port: 9200
    nodePort: 30100
  selector:
    app: es
