k8sConfig/es-stateful.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: es
  namespace: search
spec:
  serviceName: es
  replicas: 1
  selector:
    matchLabels:
      app: es
  updateStrategy:
    type: OnDelete
  podManagementPolicy: Parallel
  template:
    metadata:
      labels:
        app: es
    spec:
      containers:
      - name: es
        image: elasticsearch:8.0.0
        volumeMounts:
          - name: data
            mountPath: /usr/share/elasticsearch/data
        readinessProbe:
          httpGet:
            path: /_cluster/health?local=true
            port: 9200
          initialDelaySeconds: 20
          periodSeconds: 10
        resources:
          requests:
            cpu: 1000m
            memory: 4Gi
          limits:
            cpu: 2000m
            memory: 4Gi   
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ ReadWriteOnce ]
      storageClassName: es-data
      resources:
        requests:
          storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: es
  namespace: search
spec:
  type: NodePort
  ports:
  - port: 9200
    nodePort: 30100
  selector:
    app: es
