k8sConfig/search-frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search-frontend
  namespace: search
spec:
  replicas: 2
  selector:
    matchLabels:
      app: search-frontend
  revisionHistoryLimit: 5
  strategy:
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  minReadySeconds: 10
  template:
    metadata:
      labels:
        app: search-frontend
    spec:
      containers:
      - name: search-frontend
        image: jordanleeeee/search-frontend:v1
        readinessProbe:
          httpGet:
            path: /
            scheme: HTTP
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: search-frontend
  namespace: search
spec:
  type: NodePort
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: search-frontend
