k8sConfig/search-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search-service
  namespace: search
spec:
  replicas: 2
  selector:
    matchLabels:
      app: search-service
  revisionHistoryLimit: 5
  strategy:
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  minReadySeconds: 10
  template:
    metadata:
      labels:
        app: search-service
    spec:
      containers:
      - name: search-service
        image: jordanleeeee/search-service:v1
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            path: /health-check
            scheme: HTTPS
            port: 8443
          initialDelaySeconds: 10
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: search-service
  namespace: search
spec:
  ports:
  - port: 443
    targetPort: 8443
  selector:
    app: search-service
