k8sConfig/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: search-service
  namespace: search
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
      - jordanleeeee.com
      secretName: tls-secret
  rules:
  - host: www.jordanleeeee.com
    http:
      paths:
      - pathType: ImplementationSpecific
        path: "/"
        backend:
          service:
            name: search-service
            port:
              number: 443
